libmpdclient 2.17 (not yet released)

libmpdclient 2.16 (2018/10/09)
* support MPD protocol 0.19
  - "mount", "unmount", "listmounts"
* support MPD protocol 0.17
  - "load" with range
* add mpd_output_get_attribute()
* use UINX_MAX instead of `(unsigned)-1` to avoid undefined behavior

libmpdclient 2.15 (2018/09/02)
* support MPD protocol 0.21
  - search: support search expressions
  - search: descending sort
  - search: support sorting by "Last-Modified"
  - song: audio format
* support MPD protocol 0.17
  - player: command "seekcur"
* fix `-Wrestrict` compiler warning

libmpdclient 2.14 (2018/02/11)
* support MPD protocol 0.21
  - command "outputset"
  - mpd_output_get_plugin()
  - receive output attributes
* MSVC compatibility
* improved local and abstract socket support

libmpdclient 2.13 (2017/07/25)
* fix build with meson > 0.38.1
* fix connect error "Operation now in progress"

libmpdclient 2.12 (2017/07/21)
* support MPD protocol 0.21
  - support tag "OriginalDate"
  - command "tagtypes" plus "disable", "enable", "clear"
* support MPD protocol 0.20
  - support "plchanges" and "plchangesposid" with range
* support MPD protocol 0.19
  - commands "addtagid", "cleartagid"
  - command "listfiles"
  - grouping for "list" and "count"
  - tag "AlbumSort"
  - "seekid" with float time
* use relative #include paths to avoid clashes with other libmpdclient copies
* build with Meson instead of autotools

libmpdclient 2.11 (2017/03/20)
* fix heap corruption with mpd_connection_new_async()
* add space before "window" search argument
* detect getaddrinfo() at configure time
* add support for ArtistSort and AlbumArtistSort tags
* support MPD protocol 0.21
  - audio format specifications "dsd64" etc.
  - the "sort" parameter for commands "find"/"search"

libmpdclient 2.10 (2015/02/23)
* support abstract sockets with "@" prefix
* support tag "MUSICBRAINZ_RELEASETRACKID"
* add TCP keepalive internal and external APIs
* support MPD protocol 0.19