@@ -92,6 +92,18 @@ bool
 mpd_search_add_db_songs(struct mpd_connection *connection, bool exact);
 
 /**
+ * Search for songs in the database and adds the result to a playlist.
+ * Constraints may be specified with mpd_search_add_tag_constraint().
+ * Send the search command with mpd_search_commit().
+ *
+ * @param connection the connection to MPD
+ * @return true on success, false on error
+ */
+bool
+mpd_search_add_db_songs_to_playlist(struct mpd_connection *connection,
+				    const char *playlist_name);
+
+/**
  * Search for songs in the queue.
  * Constraints may be specified with mpd_search_add_tag_constraint().
  * Send the search command with mpd_search_commit(), and read the
