@@ -303,6 +303,7 @@ global:
 	/* mpd/search.h */
 	mpd_search_db_songs;
 	mpd_search_add_db_songs;
+	mpd_search_add_db_songs_to_playlist;
 	mpd_search_queue_songs;
 	mpd_search_db_tags;
 	mpd_count_db_songs;
