@@ -1,4 +1,5 @@
 libmpdclient 2.17 (not yet released)
+* search: add mpd_search_add_db_songs_to_playlist()
 
 libmpdclient 2.16 (2018/10/09)
 * support MPD protocol 0.19
